version 20080618_1
Updated the path to the Selenium Remote Control server so that it
would run the version that controls Firefox 3.  Firefox 3 passes
all tests.

version 20080617_1
Changed the Selenium test file again.  Now uses an array of hash
references for the tests.

version 20080613_1
Updated the Selenium test file to use a new format.  Each "story" is
now in a seperate subroutine with a few definitions added as a smart
comment of sorts.  So, for example, you can solo tests, or mark that
tests shouldn't be run.  This is all done directly at the location of
the story, so there's no need to fill out a seperate hash at the top
of the test.
This new approach is really nice because you can simply add the code
for a new test, turn solo => 1, and it will just run that one test.
Once that test is working well, you can turn solo off, and all the
tests will run.

version 20080528_1
Focus on the new page name field when creating a new page.
Removed the _maybe_add_blog_heading routine, which was always meant
to be temporary.  Using separate greasemonkey script now to generate
date information at the top, if needed.  I can't add it as a utility
yet because it contains some code which had a questionable
redistribution policy.

version 20080424_1
Added the page_submit parameter: nm_skip_revision_num_check.  This
parameter allows you to force the new version, for example if you're
writing a client for the potoss service.

Also changed the version of the selenium remote control, which almost
nobody would care about... but I thought I'd document it anyhow.

version 20080418_1
Added the ability to have a search box at the top of your page.  It
can be enabled via the "advanced options -> more advanced" tab.  Also,
added some page creation options to allow for easily adding the search
boxes as part of the page creation process.

version 20080416_1
Added the ability to create one way links easily

version 20080401_3