@@ -2,7 +2,7 @@ package PotossWebServer;
 
 use lib qw(patched_libs);
 
-# [tag:easy_install]
+# [tag:easy_install:gem]
 # Don't make the person install all the needed modules.  Give them default
 # ones which work OK.
 # Push this directory onto the end, so it's the last one that is checked.
