@@ -43,7 +43,7 @@ sub post_page {
 }
 
 sub _read_file {
-    # [tag:easy_install] - We don't use File::Slurp to avoid prerequisites
+    # [tag:easy_install:gem] - We don't use File::Slurp to avoid prerequisites
     my $filename = shift;
     open(my $fh, "<", $filename)
         || die "Cannot read from file $filename - $!";
@@ -54,7 +54,7 @@ sub _read_file {
 }
 
 sub _write_file {
-    # [tag:easy_install] - We don't use File::Slurp to avoid prerequisites
+    # [tag:easy_install:gem] - We don't use File::Slurp to avoid prerequisites
     my $filename = shift;
     my $data = shift;
     open(my $fh, ">", $filename)
